--- a/home/home.html
+++ b/home/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Libra - Elegant Website</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
     <header>
@@ -40,13 +40,11 @@
             </div>
             
             <div class="small-feature" id="latest-video">
-                <div class="small-feature" id="latest-video">
-                    <h3>Video Terbaru</h3>
-                    <div class="video-container">
-                        <iframe id="youtube-video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                <h3>Video Terbaru</h3>
+                <div class="video-container">
+                    <iframe id="youtube-video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-            
+            </div>
             <div class="small-feature">
                 <h3>Gameplay Favorit</h3>
                 <div class="video-container">
@@ -73,15 +71,6 @@
         <p>&copy; 2024 Libra. All rights reserved.</p>
     </footer>
 
-    <!-- Popup Welcome -->
-    <div id="popup" class="popup">
-        <div class="popup-content">
-            <h2>Selamat Datang di Libra</h2>
-            <p>Kami senang Anda mengunjungi website kami!</p>
-            <button id="closePopup">Close</button>
-        </div>
-    </div>
-
-    <script src="./js/script.js"></script>
+    <script src="../js/home.js"></script>
 </body>
 </html>
