--- a/contact.;l/index.html
+++ b/contact.;l/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Libra - Contact Us</title>
-    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../tes/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+    <!-- Tambahkan EmailJS Script -->
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+       (function(){
+          emailjs.init("0Y5Pzq6HB779Yz-JY"); // Ganti dengan Public Key EmailJS
+       })();
+    </script>
 </head>
 <body>
     <header>
@@ -57,12 +65,13 @@
             <h2>Contact Us</h2>
             <ul>
                 <li><i class="fas fa-envelope"></i> <a href="mailto:librastudio2694@gmail.com">librastudio2694@gmail.com</a></li>
-                <li><i class="fab fa-instagram"></i> <a href="https://instagram.com/@alif_id26">@alif_id26</a></li>
-                <li><i class="fab fa-whatsapp"></i> <a href="https://wa.me/6285267100674">+62 852 6710 0674</a></li>
+                <li><i class="fab fa-instagram"></i> <a href="https://instagram.com/yourprofile">Instagram</a></li>
+                <li><i class="fab fa-whatsapp"></i> <a href="https://wa.me/6281234567890">+62 812 3456 7890</a></li>
             </ul>
         </div>
     </div>
 
-    <script src="#"></script>
+    <!-- Tambahkan kode JavaScript pengiriman email -->
+    <script src="../tes/script.js"></script>
 </body>
 </html>
