--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="/home/index.html">Home</a></li>
+            <li><a href="/about/index.html">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="./contact/index.html">Contact</a></li>
         </ul>
