--- a/about/index.html
+++ b/about/index.html
@@ -18,8 +18,8 @@
 
     <nav>
         <ul>
-            <li><a href="/Libra Channel/home.html">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="/libra-web/home/index.html">Home</a></li>
+            <li><a href="/libra-web/about/index.html">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
