--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav>
         <ul>
-            <li><a href="/libra-web/about/index.html">Home</a></li>
+            <li><a href="/libra-web/home/index.html">Home</a></li>
             <li><a href="/libra-web/about/index.html">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="./contact/index.html">Contact</a></li>
