--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
             <li><a href="/libra-web/home/index.html">Home</a></li>
             <li><a href="/libra-web/about/index.html">About</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/libra-web/contact/">Contact</a></li>
         </ul>
     </nav>
 
