--- a/about/index.html
+++ b/about/index.html
@@ -18,9 +18,9 @@
 
     <nav>
         <ul>
-            <li><a href="/Libra Channel/home.html">Home</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Game</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
@@ -54,6 +54,10 @@
             </div>
         </div>
     </section>
+    
+    <footer>
+        <p>&copy; 2024 Libra. All rights reserved.</p>
+    </footer>
 
     <script src="../js/about.js"></script>
 </body>
