--- a/game/hmholv/index.html
+++ b/game/hmholv/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download HarvestMoon Hero of Leaf Valley</title>
-    <link rel="stylesheet" href="../css/holv.css">
+    <link rel="stylesheet" href="/css/stylegame.css">
 </head>
 <body>
     <header>
@@ -18,10 +18,10 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Game</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="https://libra2694.github.io/libra-web/home/">Home</a></li>
+            <li><a href="https://libra2694.github.io/libra-web/game/">Game</a></li>
+            <li><a href="https://libra2694.github.io/libra-web/about/">About</a></li>
+            <li><a href="https://libra2694.github.io/libra-web/contact/">Contact</a></li>
         </ul>
     </nav>
 
