--- a/home/index.html
+++ b/home/index.html
@@ -18,10 +18,10 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Game</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="https://libra2694.github.io/libra-web/home/">Home</a></li>
+            <li><a href="https://libra2694.github.io/libra-web/game/">Game</a></li>
+            <li><a href="https://libra2694.github.io/libra-web/about/">About</a></li>
+            <li><a href="https://libra2694.github.io/libra-web/contact/">Contact</a></li>
         </ul>
     </nav>
 
