--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Libra - Elegant Website</title>
+    <title>Libra - Website</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -76,8 +76,8 @@
     <!-- Popup Welcome -->
     <div id="popup" class="popup">
         <div class="popup-content">
-            <h2>Selamat Datang di Libra</h2>
-            <p>Kami senang Anda mengunjungi website kami!</p>
+            <h2>Selamat Datang di Libra Website</h2>
+            <p>Terimakasih sudah berkunjung website kami!</p>
             <button id="closePopup">Close</button>
         </div>
     </div>
