--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <h2>Selamat Datang di Libra Website</h2>
-            <p>Terimakasih sudah berkunjung website kami!</p>
+            <p>Terimakasih sudah berkunjung di website kami ^^</p>
             <button id="closePopup">Close</button>
         </div>
     </div>
